<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TelaResultados">

    <LinearLayout
        android:id="@+id/layHeader"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#ED1C24"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icSair"
            android:layout_width="2dp"
            android:layout_height="35dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginRight="115dp"
            android:layout_weight="1"
            android:text="Fim de jogo"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="247dp"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/resultados_vencedor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layHeader">

        <ImageView
            android:id="@+id/imgVencedorAvatar"
            android:layout_width="120dp"
            android:layout_height="122dp"
            android:layout_marginBottom="76dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtVencedorNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#ED1C24"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgVencedorAvatar" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintStart_toEndOf="@+id/txtVencedorNome"
            app:srcCompat="@drawable/ic_baseline_celebration_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="247dp"
        android:layout_height="410dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaJogadoresResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>