<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TelaJogo">

    <LinearLayout
        android:id="@+id/layHeader"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#ED1C24"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icSairJogo"
            android:layout_width="2dp"
            android:layout_height="35dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_power_settings_new_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginRight="90dp"
            android:layout_weight="1"
            android:text="Hora do Jogo!"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layJogadores"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/jogo_deck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaJogadoresJogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layMesa"
        android:layout_width="286dp"
        android:layout_height="194dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/jogo_mesa_centro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layIdentificadorJogadores">

        <ImageView
            android:id="@+id/imgMonteVirado"
            android:layout_width="110dp"
            android:layout_height="173dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/blue_4"
            tools:layout_editor_absoluteX="-40dp"
            tools:layout_editor_absoluteY="420dp" />

        <ImageView
            android:id="@+id/imgMonte"
            android:layout_width="110dp"
            android:layout_height="173dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/costas"
            tools:layout_editor_absoluteX="-40dp"
            tools:layout_editor_absoluteY="420dp" />

        <ImageView
            android:id="@+id/imgCartaViradaMesa"
            android:layout_width="109dp"
            android:layout_height="173dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="4dp" />

        <ImageView
            android:id="@+id/imgProximaCartaViradaMesa"
            android:layout_width="109dp"
            android:layout_height="173dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="4dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layDeck"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/jogo_deck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaCartasJogador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layIdentificadorDeck"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/jogo_identificador_baixo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/layDeck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="5dp"
            android:text="Minhas Cartas"
            android:textColor="#FFFFFF" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layIdentificadorJogadores"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/jogo_identificado_cima"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layJogadores">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="Jogadores"
            android:textColor="#FFFFFF" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toTopOf="@+id/layIdentificadorDeck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layMesa"
        app:layout_constraintVertical_bias="0.517">

        <ImageView
            android:id="@+id/icReady"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="13dp"
            android:background="@drawable/unready_to_play" />

        <TextView
            android:id="@+id/txtReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Pronto"
            android:textColor="#595959"
            android:textSize="26sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/layIdentificadorDeck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layMesa"
        app:layout_constraintVertical_bias="0.506">

        <ImageView
            android:id="@+id/icPedirUno"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/mao_uno_nao_selecionado" />

        <TextView
            android:id="@+id/txtPedirUno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="10dp"
            android:text="UNO!"
            android:textColor="#595959"
            android:textSize="32sp"
            android:textStyle="bold" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>