<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TelaCadastro">

    <LinearLayout
        android:id="@+id/layHeader"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#ED1C24"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icSair"
            android:layout_width="2dp"
            android:layout_height="35dp"
            android:layout_marginLeft="-15dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginRight="90dp"
            android:layout_weight="1"
            android:text="Cadastro de Usuário"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpNome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#595959"
        android:hint="Nome"
        android:textColorHint="#ED1C24"
        app:boxBackgroundColor="#3C595959"
        app:hintTextColor="#ED1C24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#595959" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpSenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#595959"
        android:hint="Senha"
        android:textColorHint="#ED1C24"
        app:boxBackgroundColor="#3C595959"
        app:hintTextColor="#ED1C24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpNome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#595959" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpConfSenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:backgroundTint="#595959"
        android:hint="Confirme a Senha"
        android:textColorHint="#ED1C24"
        app:boxBackgroundColor="#3C595959"
        app:hintTextColor="#ED1C24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpSenha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edConfSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#595959" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:text="Selecione Seu Avatar"
        android:textAlignment="center"
        android:textColor="#ED1C24"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpConfSenha" />

    <FrameLayout
        android:id="@+id/layListaJogos"
        android:layout_width="222dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaAvatares"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#ED1C24"
        android:text="Realizar Cadastro"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layListaJogos" />

</androidx.constraintlayout.widget.ConstraintLayout>