...
            android:inputType="textPassword"
            android:textColor="#595959" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F8DA27"
        android:text="Entrar"
        android:textColor="#FFFFFF"
...
